Thu Sep 16 14:59:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/TC.mpc:
        * tao/TransportCurrent/TC_IIOP.mpc:
          Reduced the number of files generated

Thu Sep 16 14:54:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/TC.mpc:
        * tao/TransportCurrent/TC_IIOP.mpc:
          Added empty IDL_Files sections

Thu Sep 16 10:32:39 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * test/Bug_3812_Regression:
          Removed unused, incomplete and incorrect test.
          The test attempted to test the problems from the referred bug
          but instead of testing the code from TAO itself it tested some
          simulating code in the test itself making it independent of whether
          TAO was fixed or not.
          Unfortunately it is not possible to change the test to reliably
          reproduce the bug (or its being fixed) using more generalized code
          accessing TAO functionality itself.

Thu Sep 16 09:19:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH_AMI/inner_i.cpp:
        * examples/CSD_Strategy/ThreadPool5/ClientTask.cpp:
        * examples/CSD_Strategy/ThreadPool5/FooServantList.cpp:
        * orbsvcs/Event_Service/Event_Service.cpp:
        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
        * orbsvcs/Scheduling_Service/Scheduling_Service.cpp:
        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
        * orbsvcs/orbsvcs/Channel_Clients_T.h:
        * orbsvcs/orbsvcs/CosConcurrencyControl.idl:
        * orbsvcs/orbsvcs/CosNaming.idl:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.cpp:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/Notify/Random_File.cpp:
        * orbsvcs/tests/Bug_2248_Regression/client.cpp:
        * orbsvcs/tests/EC_Throughput/ECT_Throughput.cpp:
        * orbsvcs/tests/ImplRepo/ReconnectServer/client.cpp: