@@ -1,3 +1,9 @@
+Fri Sep 17 06:26:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
+        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
+          Moved implementation _nil method into the generated cpp file
+
 Thu Sep 16 14:59:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/TransportCurrent/TC.mpc:
